fixed content bugs in terms and conditions; added auto collapse, contract UX in js, minor UI/UX Improvements

--- a/css/terms.css
+++ b/css/terms.css
@@ -10,6 +10,10 @@ main {
     padding: 3rem;
 }
 
+main span {
+    font-size: 2rem;
+}
+
 a {
     font-family: var(--font-secondary);
     color: #fff;
@@ -36,4 +40,27 @@ main section p {
     font-size: 1.2rem;
     font-weight: 100;
     margin-top: 10px;
+}
+
+@media (max-width: 600px) {
+    main {
+        font-size: 2.2rem;
+        padding: 2rem;
+    }
+
+    main span {
+        font-size: 1.8rem;
+    }
+
+    a {
+        font-size: 1rem;
+    }
+
+    main section h2 {
+        font-size: 1.4rem;
+    }
+
+    main section p {
+        font-size: 1.1rem;
+    }
 }
